[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tonic = "0.11"            # gRPC
prost = "0.12"            # Protobuf
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
tracing = "0.1"

[build-dependencies]
tonic-build = "0.11"
